--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -7,6 +7,7 @@
     android:fontFamily="@font/open_sans"
     android:textColor="@color/black"
     android:textFontWeight="500"
+    android:text="\"
     android:textSize="25sp"
-    android:padding="5dip"
+    android:padding="15dp"
     />
